--- a/index.html
+++ b/index.html
@@ -826,6 +826,7 @@
 						// Create a Howler.js sound object
 						const sound = new Howl({
 							src: [audioUrl],
+							format: ['wav'], // Specify the format here
 							html5: true, // Force HTML5 audio playback
 							onplay: () => {
 								console.log("Currently speaking");
