--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2104,14 +2104,14 @@ $avatar_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="48" name="avatar_bank_3" tags="" position="2225,1225" size="100,100"></tw-passagedata><tw-passagedata pid="49" name="avatar_bank_4" tags="" position="2225,1350" size="100,100"></tw-passagedata><tw-passagedata pid="50" name="avatar_bank_2" tags="" position="2100,1350" size="100,100"></tw-passagedata><tw-passagedata pid="51" name="avatar_bank_1" tags="" position="2100,1225" size="100,100"></tw-passagedata><tw-passagedata pid="52" name="avatar_church_1" tags="" position="2725,1200" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;avatar_church1_00/Buro visits the church, where he meets Father Kent. Father Kent, a globe trotter evangelist hailing from the rust belt in Akron, tells Buro about Hachi&#39;s nightly visits to the church, where he finds shelter and companionship. He describes Hachi as a gentle soul, always seeking to give comfort./m_talk2&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_church1_00/Buro visits the church, where he meets Father Kent. Father Kent, a globe trotter evangelist hailing from the rust belt in Akron, tells Buro about Hachi&#39;s nightly visits to the church, where he finds shelter and companionship. He describes Hachi as a gentle soul, always seeking to give comfort./church_2&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $avatar_passage
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_church1_00false&quot; and $avatar_movement == &quot;Looking&quot;&gt;&gt;
   &lt;&lt;set $avatar_passage to &quot;avatar_church1_01/Buro steps close to the big arch framing the doors to the church. He scans the steps, the nearby trees, and the stained-glass windows, searching for any trace of Hachi&#39;s presence.
-As he approach, Buro said to himself, &#39;Let&#39;s see if there&#39;s any sign of Hachi here. Maybe he&#39;s left a clue behind.&#39;/crowd2&gt;&gt;
+As he approach, Buro said to himself, &#39;Let&#39;s see if there&#39;s any sign of Hachi here. Maybe he&#39;s left a clue behind.&#39;/m_heysh2&gt;&gt;
 &lt;&lt;set $avatar_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -2130,13 +2130,13 @@ As he approach, Buro said to himself, &#39;Let&#39;s see if there&#39;s any sign
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="53" name="avatar_church_2" tags="" position="2725,1325" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $avatar_passage to &quot;avatar_church2_00/Buro sees Father Kent approaching, the wise and worldly priest of the church, and engages in conversation about Hachi&#39;s visits. Buro siad to him, &#39;Father Kent, I&#39;ve been searching for my dog buddy, Hachi. Have you seen him around the church lately?&#39;/m_talk2&quot;&gt;&gt;
+&lt;&lt;set $avatar_passage to &quot;avatar_church2_00/Buro sees Father Kent approaching, the wise and worldly priest of the church, and engages in conversation about Hachi&#39;s visits. Buro siad to him, &#39;Father Kent, I&#39;ve been searching for my dog buddy, Hachi. Have you seen him around the church lately?&#39;/m_talk1&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $avatar_passage
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_church2_00false&quot; and $avatar_movement == &quot;Looking&quot;&gt;&gt;
-  &lt;&lt;set $avatar_passage to &quot;avatar_church2_01/ To which he replied,&#39;Indeed, Hachi is a familiar presence here. He&#39;s known to seek solace and comfort among our congregation.&#39; Then he started to share stories about Hachi&#39;s nightly visits, describing him as a loyal and gentle soul who seeks shelter and companionship within the church walls. /crowd2&quot;&gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_church2_01/ To which he replied,&#39;Indeed, Hachi is a familiar presence here. He&#39;s known to seek solace and comfort among our congregation.&#39; Then he started to share stories about Hachi&#39;s nightly visits, describing him as a loyal and gentle soul who seeks shelter and companionship within the church walls. /church&quot;&gt;&gt;
 &lt;&lt;set $avatar_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -2161,7 +2161,7 @@ $avatar_passage
 $avatar_passage
 
 &lt;&lt;if $avatar_narrating == &quot;avatar_church3_00false&quot; and $avatar_movement == &quot;Looking&quot;&gt;&gt;
-  &lt;&lt;set $avatar_passage to &quot;avatar_church3_01/ Ah, my child, you have a curious mind. Let me tell you of the roads I&#39;ve traveled and the lessons I&#39;ve learned along the way... /crowd2&quot;&gt;&gt;
+  &lt;&lt;set $avatar_passage to &quot;avatar_church3_01/ Ah, my child, you have a curious mind. Let me tell you of the roads I&#39;ve traveled and the lessons I&#39;ve learned along the way... /m_giftgiver&quot;&gt;&gt;
 &lt;&lt;set $avatar_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
