--- a/index.html
+++ b/index.html
@@ -666,6 +666,7 @@
 				var fullMessage;
 				var messageID = ""; // Global variable to store the message ID
 				var oldMessageID ="";
+				var messageID_tmp = "";
 
 				function displayText(message) {
 					var messageDisplayDiv = document.getElementById("messageDisplayDiv");
@@ -677,8 +678,8 @@
 					}
 
 					if (delimiterIndex !== -1) { // Check if the first delimiter exists
-						messageID = message.substring(0, delimiterIndex); // Store the message ID
-						oldMessageID=messageID;
+						messageID_tmp = message.substring(0, delimiterIndex); // Store the message ID
+						//oldMessageID=messageID;
 						var secondDelimiterIndex = message.lastIndexOf("/"); // Find the index of the second delimiter "/"
 
 						if (secondDelimiterIndex !== -1 && secondDelimiterIndex !== delimiterIndex) { // Check if the second delimiter exists and is not the same as the first one
@@ -823,6 +824,8 @@
 							onplay: () => {
 								console.log("Currently speaking");
 								speaking = true;
+								messageID=messageID_tmp;
+								oldMessageID=messageID;
 								lastSpokenMessage = transliteratedMessage;
 							},
 							onend: () => {
@@ -883,23 +886,6 @@
 						console.error("Speech synthesis error:", event.error);
 					};
 				}
-
-				// function checkSpeechSynthesis() {
-				// 	// Check if speechSynthesis object is available
-				// 	if ('speechSynthesis' in window) {
-				// 		// Check if speaking flag is true
-				// 		if (speechSynthesis.speaking) {
-				// 			speaking = true;
-				// 		} else {
-				// 			speaking = false;
-				// 		}
-				// 	} else {
-				// 		console.log("Speech synthesis is not supported in this browser.");
-				// 	}
-				// }
-
-				// // Call the function periodically (e.g., every 5 seconds).
-				// setInterval(checkSpeechSynthesis, 1000); // Adjust the interval as needed
 
 				let weatherDescription = null;
 
