--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 				<span class="material-icons" style="vertical-align: middle;">bluetooth_searching</span> Connect to Avatar
 			</button>
 		</div>
-		<!-- Div to display status of Avatar BT shop -->
-		<div id="closestShop"></div>
+		<!-- Div to display status of Avatar BT shop
+		<div id="closestShop"></div> -->
 		<!-- Coordinates-->
 		<div id="currentLocation"></div>
 		<!-- Movement>-->
@@ -77,8 +77,6 @@
 						console.error('Error initializing sounds:', error);
 					}
 				}
-
-
 
 				function toggleDeviceName() {
 					var checkbox = document.getElementById("hachiCheckbox");
