--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 		</div>
 		<div id="avatarBTdiv" style="position: relative;">
 			<!-- Listen Button (left half) -->
-			<button id="listenButton" class="button listen-button" onclick="listenFunction()">Listen</button>
+			<button id="listenButton" class="button listen-button">Listen</button>
 
 			<!-- Interact Button (right half) -->
-			<button id="interactButton" class="button interact-button" onclick="interactFunction()">Interact</button>
+			<button id="interactButton" class="button interact-button">Interact</button>
 			<!-- Connect Button. -->
 			<button id="connectButton" class="button" disabled onclick="connecting_Sound.play(), wakeLock(), displayText('Connecting...')">
 				<span class="material-icons" style="vertical-align: middle;">bluetooth_searching</span> Connect to Avatar
