--- a/index.html
+++ b/index.html
@@ -23,15 +23,19 @@
 			<img class="logo" src="logo.svg" alt="Logo" />
 		</div>
 		<div id="avatarBTdiv" style="position: relative;">
-			<!-- Listen Button (left half) -->
-			<button id="listenButton" class="button listen-button">Listen</button>
+			<div class="top-section">
+				<!-- Listen Button (left half) -->
+				<button id="listenButton" class="button listen-button">Listen</button>
 
-			<!-- Interact Button (right half) -->
-			<button id="interactButton" class="button interact-button">Interact</button>
-			<!-- Connect Button. -->
-			<button id="connectButton" class="button" disabled onclick="connecting_Sound.play(), wakeLock(), displayText('Connecting...')">
-				<span class="material-icons" style="vertical-align: middle;">bluetooth_searching</span> Connect to Avatar
-			</button>
+				<!-- Interact Button (right half) -->
+				<button id="interactButton" class="button interact-button">Interact</button>
+			</div>
+			<div class="bottom-section">
+				<!-- Connect Button. -->
+				<button id="connectButton" class="button" disabled onclick="connecting_Sound.play(), wakeLock(), displayText('Connecting...')">
+					<span class="material-icons" style="vertical-align: middle;">bluetooth_searching</span> Connect to Avatar
+				</button>
+			</div>
 		</div>
 		<!-- Div to display status of Avatar BT shop
 		<div id="closestShop"></div> -->
