--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div id="logoSpace">
 			<img class="logo" src="logo.svg" alt="Logo" />
 		</div>
-		<div id="avatarBTdiv" style="position: relative;">
+		<div id="avatarBTdiv">
 			<div class="top-section">
 				<!-- Listen Button (left half) -->
 				<button id="listenButton" class="button listen-button">Listen</button>
