--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div id="avatarBTdiv">
 			<div class="top-section">
 				<!-- Listen Button (left half) -->
-				<button id="listenButton" class="button listen-button">Listen</button>
+				<button id="listenButton" class="button listen-button"><span class="material-symbols-outlined">hearing</span>Listen</button>
 
 				<!-- Interact Button (right half) -->
 				<button id="interactButton" class="button interact-button">Interact</button>
