--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 		<div id="avatarBTdiv">
 			<div class="top-section">
 				<!-- Listen Button (left half) -->
-				<button id="listenButton" class="button listen-button"><span class="material-symbols-outlined">hearing</span>Listen</button>
+				<button id="listenButton" class="button listen-button">
+					<span class="material-symbols-outlined" style="vertical-align: middle;">hearing</span>Listen
+				</button>
 
 				<!-- Interact Button (right half) -->
 				<button id="interactButton" class="button interact-button">Interact</button>
