--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 				</button>
 
 				<!-- Interact Button (right half) -->
-				<button id="interactButton" class="button interact-button">Interact</button>
+				<button id="interactButton" class="button interact-button">
+					<span class="material-symbols-outlined" style="vertical-align: middle" ;> back_hand </span>Interact
+				</button>
 			</div>
 			<div class="bottom-section">
 				<!-- Connect Button. -->
