--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 		<div id="avatarBTdiv">
 			<div class="top-section">
 				<!-- Listen Button (left half) -->
-				<button id="listenButton" class="button listen-button">
-					<span class="material-symbols-outlined" style="vertical-align: middle;">hearing</span> Listen
+				<button id="listenButton" class="button listen-button" onclick="listenFunction()">
+					<span class="material-symbols-outlined" style="vertical-align: middle;">hearing</span> Listen only
 				</button>
 
 				<!-- Interact Button (right half) -->
-				<button id="interactButton" class="button interact-button">
+				<button id="interactButton" class="button interact-button" onclick="interactFunction()">
 					<span class="material-symbols-outlined" style="vertical-align: middle;"">back_hand</span> Interact
 				</button>
 			</div>
