--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			</div>
 			<div class="bottom-section">
 				<!-- Connect Button. -->
-				<button id="connectButton" class="button" disabled onclick="connecting_Sound.play(), wakeLock(), displayText('Connecting...')">
+				<button id="connectButton" class="button" style="display: none;" disabled onclick="connecting_Sound.play(), wakeLock(), displayText('Connecting...')">
 					<span class="material-icons" style="vertical-align: middle;">bluetooth_searching</span> Connect to Avatar
 				</button>
 			</div>
@@ -90,6 +90,18 @@
 					} catch (error) {
 						console.error('Error initializing sounds:', error);
 					}
+				}
+
+				function interactFunction() {
+					// Hide the Listen button
+					document.getElementById('listenButton').style.display = 'none';
+					
+					// Show the Connect button
+					document.getElementById('connectButton').style.display = 'inline-block';
+				}
+
+				function listenFunction() {
+					
 				}
 
 				function toggleDeviceName() {
