--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
 				function interactFunction() {
 					// Hide the Listen button
 					document.getElementById('listenButton').style.display = 'none';
+					// Hide the Interact button
+					document.getElementById('interactButton').style.display = 'none';
 					
 					// Show the Connect button
 					document.getElementById('connectButton').style.display = 'inline-block';
