--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
 				}
 
 				function listenFunction() {
+					// Hide the Listen button
+					document.getElementById('listenButton').style.display = 'none';
+					// Hide the Interact button
+					document.getElementById('interactButton').style.display = 'none';
+					
 					document.getElementById('toggleContainer').style.display = 'flex';
 				}
 
