--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 
 				<!-- Toggle Switch -->
 				<div id="toggleContainer" style="display: none;">
-					<span id="buroLabel">Buro</span>
+					<span id="buroToggle">Buro</span>
 					<label class="switch">
 						<input type="checkbox" id="toggleSwitch" onchange="toggleFunction()">
 						<span class="slider"></span>
 					</label>
-					<span id="toggleLabel">Hachi</span>
+					<span id="hachiToggle">Hachi</span>
 				</div>
 
 				<!-- Interact Button (right half) -->
