--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,7 @@
 			
 			setInterval(() => {
 				if (listenClient === false ){
-					consol.log("Writing data");
+					console.log("Writing data");
 					writeToDatabase();
 				}
 			}, 200);
