--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					} else {
 						deviceName = "avatar_BT";
     				}
-    			console.log('Device:', deviceName);
+    			console.log('Listening as:', deviceName);
 				}
 				
 
