--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<div id="toggleContainer" style="display: none;">
 					<span id="buroToggle">Buro</span>
 					<label class="switch">
-						<input type="checkbox" id="toggleSwitch" onchange="connecting_Sound.play(), toggleFunction(), displayText('Listening only.')">
+						<input type="checkbox" id="toggleSwitch" onchange="connecting_Sound.play(), toggleListening(), displayText('Listening only.')">
 						<span class="slider"></span>
 					</label>
 					<span id="hachiToggle">Hachi</span>
@@ -121,8 +121,22 @@
 					document.getElementById('interactButton').style.display = 'none';
 					// Show toggle
 					document.getElementById('toggleContainer').style.display = 'flex';
-				}				
+				}
 
+				function toggleListening() {
+				const toggleSwitch = document.getElementById('toggleSwitch');
+					if (toggleSwitch.checked) {
+						deviceName = "hachi_BT";
+						off(ref(database, databaseName));
+						readFromDatabase(deviceName); // Read data after writing
+					} else {
+						deviceName = "avatar_BT";
+						off(ref(database, databaseName));
+						readFromDatabase(deviceName); // Read data after writing
+    				}
+    			console.log('Listening as:', deviceName);
+				}
+				
 				function toggleDeviceName() {
 					var checkbox = document.getElementById("hachiCheckbox");
 					if (checkbox.checked) {
@@ -1240,20 +1254,7 @@
 				}
 			}
 
-			function toggleFunction() {
-				const toggleSwitch = document.getElementById('toggleSwitch');
-					if (toggleSwitch.checked) {
-						deviceName = "hachi_BT";
-						off(ref(database, databaseName));
-						readFromDatabase(deviceName); // Read data after writing
-					} else {
-						deviceName = "avatar_BT";
-						off(ref(database, databaseName));
-						readFromDatabase(deviceName); // Read data after writing
-    				}
-    			console.log('Listening as:', deviceName);
-			}
-
+			
 			setInterval(() => {
 				if (listenClient === false ){
 					writeToDatabase();
