--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div id="avatarBTdiv">
 			<div class="top-section">
 				<!-- Listen Button (left half) -->
-				<button id="listenButton" class="button listen-button">
+				<button id="listenButton" class="button listen-button" onclick="listenFunction()">
 					<span class="material-symbols-outlined" style="vertical-align: middle;">hearing</span> Listen only
 				</button>
 
@@ -1273,7 +1273,7 @@
 					toggleListening();
 				});
 			});
-
+			
 		</script>
 	</body>
 </html>
