--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<div id="toggleContainer" style="display: none;">
 					<span id="buroToggle">Buro</span>
 					<label class="switch">
-						<input type="checkbox" id="toggleSwitch" onchange="connecting_Sound.play(), toggleListening(), displayText('Listening only.')">
+						<input type="checkbox" id="toggleSwitch" onchange="connecting_Sound.play(), displayText('Listening only.')">
 						<span class="slider"></span>
 					</label>
 					<span id="hachiToggle">Hachi</span>
