--- a/index.html
+++ b/index.html
@@ -1259,6 +1259,7 @@
 						off(ref(database, databaseName));
 						readFromDatabase(deviceName);
 						topSection.style.display = 'none';
+						console.log("Listening as: "+ deviceName);
 					}
 				}, 5000);
 			}
